force-app/main/default/objects/Evening_Routine_Tracking__c/Evening_Routine_Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracks evening routine completion, wind-down activities, and sleep preparation to improve sleep quality</description>
    <label>Evening Routine Tracking</label>
    <pluralLabel>Evening Routine Trackings</pluralLabel>
    <nameField>
        <displayFormat>ERT-{0000}</displayFormat>
        <label>Evening Routine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>