force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Activities_Completed__c.field-meta.xml
<CustomField>
    <fullName>Activities_Completed__c</fullName>
    <label>Activities Completed</label>
    <description>Evening activities completed</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Dishes</fullName>
            </value>
            <value>
                <fullName>Shower</fullName>
            </value>
            <value>
                <fullName>Skincare</fullName>
            </value>
            <value>
                <fullName>Teeth</fullName>
            </value>
            <value>
                <fullName>Medications</fullName>
            </value>
            <value>
                <fullName>Prep Tomorrow</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Journal</fullName>
            </value>
            <value>
                <fullName>Meditate</fullName>
            </value>
            <value>
                <fullName>Stretch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>