force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Actual_Bedtime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bedtime__c</fullName>
    <label>Actual Bedtime</label>
    <description>Actual bedtime</description>
    <type>Time</type>
</CustomField>