force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Caffeine_After_2pm__c.field-meta.xml
<CustomField>
    <fullName>Caffeine_After_2pm__c</fullName>
    <label>Caffeine After 2pm</label>
    <description>Whether caffeine was consumed after 2pm</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>