force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <description>Date of evening routine</description>
    <type>Date</type>
    <required>true</required>
    <defaultValue>TODAY()</defaultValue>
</CustomField>