force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Exercise_After_6pm__c.field-meta.xml
<CustomField>
    <fullName>Exercise_After_6pm__c</fullName>
    <label>Exercise After 6pm</label>
    <description>Whether exercise occurred after 6pm</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>