force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Evening routine notes</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>