force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Routine_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Routine_End_Time__c</fullName>
    <label>Routine End Time</label>
    <description>When evening routine ended</description>
    <type>DateTime</type>
</CustomField>