force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Routine_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Routine_Start_Time__c</fullName>
    <label>Routine Start Time</label>
    <description>When evening routine started</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>