force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Screen_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Screen_Time_Minutes__c</fullName>
    <label>Screen Time (Minutes)</label>
    <description>Screen time before bed</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>