force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Sleep_Quality__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Quality__c</fullName>
    <label>Sleep Quality</label>
    <description>Sleep quality rating (1-10) - filled next morning</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>