force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Stress_Level__c.field-meta.xml
<CustomField>
    <fullName>Stress_Level__c</fullName>
    <label>Stress Level</label>
    <description>Stress level (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>