force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Target_Bedtime__c.field-meta.xml
<CustomField>
    <fullName>Target_Bedtime__c</fullName>
    <label>Target Bedtime</label>
    <description>Target bedtime</description>
    <type>Time</type>
</CustomField>