force-app/main/default/objects/Evening_Routine_Tracking__c/fields/Total_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_Minutes__c</fullName>
    <label>Total Duration (Minutes)</label>
    <description>Total duration of evening routine</description>
    <type>Number</type>
    <formula>IF(
    NOT(ISBLANK(Routine_End_Time__c)),
    (Routine_End_Time__c - Routine_Start_Time__c) * 24 * 60,
    NULL
)</formula>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>