force-app/main/default/objects/Evening_Routine_Tracking__c/validationRules/Screen_Time_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Screen_Time_Non_Negative</fullName>
    <active>true</active>
    <description>Ensures screen time is non-negative</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Screen_Time_Minutes__c)),
    Screen_Time_Minutes__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Screen_Time_Minutes__c</errorDisplayField>
    <errorMessage>Screen Time must be a non-negative number.</errorMessage>
</ValidationRule>