force-app/main/default/objects/Evening_Routine_Tracking__c/validationRules/Stress_Level_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Stress_Level_Range</fullName>
    <active>true</active>
    <description>Ensures stress level is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Stress_Level__c)),
    OR(Stress_Level__c &lt; 1, Stress_Level__c &gt; 10)
)</errorConditionFormula>
    <errorDisplayField>Stress_Level__c</errorDisplayField>
    <errorMessage>Stress Level must be between 1 and 10.</errorMessage>
</ValidationRule>